[gd_scene load_steps=40 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/image/wood.png" type="Texture" id=2]
[ext_resource path="res://assets/image/wood2.png" type="Texture" id=3]
[ext_resource path="res://assets/font/CHLORINR.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/image/rat.png" type="Texture" id=5]
[ext_resource path="res://assets/image/pig.png" type="Texture" id=6]
[ext_resource path="res://assets/image/dices.png" type="Texture" id=7]
[ext_resource path="res://assets/font/Grandstander-clean.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/image/arrow.png" type="Texture" id=9]
[ext_resource path="res://assets/sound/dice1.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/dice2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sound/dice3.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sound/dice4.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/pig.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sound/hold.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/image/cow.png" type="Texture" id=16]
[ext_resource path="res://assets/image/dragon.png" type="Texture" id=17]
[ext_resource path="res://assets/image/menu.png" type="Texture" id=18]
[ext_resource path="res://assets/image/score.png" type="Texture" id=19]
[ext_resource path="res://assets/sound/music.ogg" type="AudioStream" id=20]
[ext_resource path="res://assets/image/comic.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 142
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 17
use_mipmaps = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.564706, 0.564706, 0.564706, 1 )

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=14]
size = 28
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=16]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=17]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 8 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.439216, 0.439216, 0.439216, 1 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="WhiteBottom" type="TextureRect" parent="."]
modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="WhiteBottom2" type="TextureRect" parent="."]
modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
margin_right = 1024.0
margin_bottom = 140.0
mouse_filter = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Dice Pig"
align = 1
valign = 1

[node name="Player2" type="TextureRect" parent="."]
margin_left = 700.0
margin_top = 150.0
margin_right = 1000.0
margin_bottom = 370.0
focus_mode = 2
mouse_filter = 0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Player1" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 150.0
margin_right = 320.0
margin_bottom = 370.0
focus_mode = 2
mouse_filter = 0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="Dice" type="Sprite" parent="."]
position = Vector2( 510, 330 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 3
vframes = 2

[node name="Player1Score" type="Label" parent="."]
margin_left = 20.0
margin_top = 380.0
margin_right = 320.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "121"
align = 1
valign = 1

[node name="RoundScore" type="Label" parent="."]
margin_left = 440.0
margin_top = 420.0
margin_right = 590.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 3 )
text = "123"
align = 1
valign = 1

[node name="RoundButton" type="Button" parent="."]
margin_left = 430.0
margin_top = 400.0
margin_right = 590.0
margin_bottom = 510.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Player2Score" type="Label" parent="."]
margin_left = 710.0
margin_top = 380.0
margin_right = 1010.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "121"
align = 1
valign = 1

[node name="DiceButton" type="Button" parent="."]
margin_left = 400.0
margin_top = 190.0
margin_right = 630.0
margin_bottom = 267.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Dice!"
flat = true

[node name="DiceHiddenButton" type="Button" parent="."]
margin_left = 450.0
margin_top = 270.0
margin_right = 570.0
margin_bottom = 390.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="ArrowRight" type="TextureButton" parent="."]
margin_left = 610.0
margin_top = 400.0
margin_right = 710.0
margin_bottom = 500.0
texture_normal = ExtResource( 9 )

[node name="ArrowLeft" type="TextureButton" parent="."]
margin_left = 410.0
margin_top = 500.0
margin_right = 510.0
margin_bottom = 600.0
rect_rotation = 180.0
texture_normal = ExtResource( 9 )

[node name="DiceAudio1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="DiceAudio2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="DiceAudio3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="DiceAudio4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="PigAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="HoldAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="enemy1" type="Sprite" parent="."]
position = Vector2( 770, 570 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 16 )

[node name="enemy2" type="Sprite" parent="."]
position = Vector2( 850, 560 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 17 )

[node name="enemy3" type="Sprite" parent="."]
position = Vector2( 940, 550 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="pig1" type="Sprite" parent="."]
position = Vector2( 90, 570 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="pig2" type="Sprite" parent="."]
position = Vector2( 170, 570 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="pig3" type="Sprite" parent="."]
position = Vector2( 250, 570 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="Menu" type="Button" parent="."]
visible = false
margin_left = 30.0
margin_top = 30.0
margin_right = 220.0
margin_bottom = 76.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Menu"
flat = true

[node name="HighScore" type="Button" parent="."]
visible = false
margin_left = 40.0
margin_top = 90.0
margin_right = 230.0
margin_bottom = 136.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "High Score"
flat = true

[node name="VS" type="Label" parent="."]
visible = false
margin_left = 290.0
margin_top = 550.0
margin_right = 380.0
margin_bottom = 596.0
mouse_filter = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "VS"
align = 1

[node name="Score" type="Button" parent="."]
visible = false
margin_left = 30.0
margin_top = 40.0
margin_right = 230.0
margin_bottom = 77.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Score"
flat = true
align = 0

[node name="ScoreValue" type="Label" parent="."]
margin_left = 100.0
margin_top = 90.0
margin_right = 347.0
margin_bottom = 121.0
mouse_filter = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "123456 + 300"

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 920.0
margin_top = 30.0
margin_right = 1012.0
margin_bottom = 122.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 18 )

[node name="ScoreButton" type="TextureButton" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 127.0
margin_bottom = 128.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 19 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -0.3
autoplay = true

[node name="Player2Name" type="Label" parent="."]
margin_left = 740.0
margin_top = 100.0
margin_right = 920.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 6 )
text = "Chuck E. Cheese"
align = 2

[node name="Player2Info" type="Label" parent="."]
margin_left = 110.0
margin_top = 40.0
margin_right = 234.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 6 )
text = "x2 (1Up > 200)"

[node name="LevelProgress" type="ProgressBar" parent="."]
margin_left = 445.0
margin_top = 553.0
margin_right = 575.0
margin_bottom = 573.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 9.0
step = 1.0
value = 4.0
rounded = true
percent_visible = false

[node name="LevelProgressBorder" type="Line2D" parent="."]
position = Vector2( 27.9451, -8.30573 )
scale = Vector2( 0.945206, 1.01973 )
points = PoolVector2Array( 440, 550, 580, 550, 580, 570, 504.322, 570, 440, 570, 440, 550 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )
texture_mode = 297

[node name="SpeechAnger" type="TextureRect" parent="."]
visible = false
margin_left = 640.0
margin_top = 150.0
margin_right = 1098.0
margin_bottom = 541.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 21 )

[node name="Label" type="Label" parent="SpeechAnger"]
margin_left = 100.0
margin_top = 133.0
margin_right = 415.0
margin_bottom = 213.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "&#@§!!!"

[node name="HighScoreView" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 20.0
margin_top = 130.0
margin_right = 420.0
margin_bottom = 570.0

[node name="Background" type="ColorRect" parent="HighScoreView"]
margin_left = 4.0
margin_top = 4.0
margin_right = 396.0
margin_bottom = 436.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Title" type="Label" parent="HighScoreView/Background"]
margin_top = 10.0
margin_right = 380.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 10 )
text = "High Score"
align = 1

[node name="Label1" type="Label" parent="HighScoreView/Background"]
margin_top = 110.0
margin_right = 380.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 11 )
text = "4000"
align = 1
valign = 1

[node name="Label2" type="Label" parent="HighScoreView/Background"]
margin_top = 170.0
margin_right = 380.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 11 )
text = "3000"
align = 1
valign = 1

[node name="Label3" type="Label" parent="HighScoreView/Background"]
margin_top = 230.0
margin_right = 380.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 11 )
text = "2000"
align = 1
valign = 1

[node name="Label4" type="Label" parent="HighScoreView/Background"]
margin_top = 290.0
margin_right = 380.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 11 )
text = "1000"
align = 1
valign = 1

[node name="Label5" type="Label" parent="HighScoreView/Background"]
margin_top = 350.0
margin_right = 380.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 11 )
text = "500"
align = 1
valign = 1

[node name="SettingsView" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 20.0
margin_top = 130.0
margin_right = 580.0
margin_bottom = 570.0

[node name="Background" type="ColorRect" parent="SettingsView"]
margin_left = 4.0
margin_top = 4.0
margin_right = 556.0
margin_bottom = 436.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Title" type="Label" parent="SettingsView/Background"]
margin_top = 10.0
margin_right = 540.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 10 )
text = "Settings"
align = 1

[node name="FullScreen" type="Label" parent="SettingsView/Background"]
margin_top = 110.0
margin_right = 380.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 11 )
text = "Full Screen"
align = 1
valign = 1

[node name="Music" type="Label" parent="SettingsView/Background"]
margin_top = 170.0
margin_right = 380.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 11 )
text = "Music"
align = 1
valign = 1

[node name="Effects" type="Label" parent="SettingsView/Background"]
margin_top = 230.0
margin_right = 380.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 11 )
text = "Sound Effects"
align = 1
valign = 1

[node name="Tougher" type="Label" parent="SettingsView/Background"]
margin_top = 290.0
margin_right = 380.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 11 )
text = "Tougher"
align = 1
valign = 1

[node name="FastMode" type="Label" parent="SettingsView/Background"]
margin_top = 350.0
margin_right = 380.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 11 )
text = "Fast Mode"
align = 1
valign = 1

[node name="FullScreenButton" type="Button" parent="SettingsView/Background"]
margin_left = 400.0
margin_top = 110.0
margin_right = 473.0
margin_bottom = 156.0
focus_mode = 0
custom_fonts/font = SubResource( 12 )
enabled_focus_mode = 0
text = "On"
flat = true

[node name="MusicButton" type="Button" parent="SettingsView/Background"]
margin_left = 400.0
margin_top = 170.0
margin_right = 473.0
margin_bottom = 216.0
focus_mode = 0
custom_fonts/font = SubResource( 12 )
enabled_focus_mode = 0
text = "On"
flat = true

[node name="EffectsButton" type="Button" parent="SettingsView/Background"]
margin_left = 400.0
margin_top = 230.0
margin_right = 473.0
margin_bottom = 276.0
focus_mode = 0
custom_fonts/font = SubResource( 12 )
enabled_focus_mode = 0
text = "On"
flat = true

[node name="TougherButton" type="Button" parent="SettingsView/Background"]
margin_left = 400.0
margin_top = 290.0
margin_right = 473.0
margin_bottom = 336.0
focus_mode = 0
custom_fonts/font = SubResource( 12 )
enabled_focus_mode = 0
text = "On"
flat = true

[node name="FastModeButton" type="Button" parent="SettingsView/Background"]
margin_left = 400.0
margin_top = 350.0
margin_right = 473.0
margin_bottom = 396.0
focus_mode = 0
custom_fonts/font = SubResource( 12 )
enabled_focus_mode = 0
text = "On"
flat = true

[node name="InstructionsView" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 20.0
margin_top = 130.0
margin_right = 580.0
margin_bottom = 570.0

[node name="Background" type="ColorRect" parent="InstructionsView"]
margin_left = 4.0
margin_top = 4.0
margin_right = 556.0
margin_bottom = 436.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Title" type="Label" parent="InstructionsView/Background"]
margin_top = 10.0
margin_right = 540.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 10 )
text = "Instructions"
align = 1

[node name="Info" type="RichTextLabel" parent="InstructionsView/Background"]
margin_left = 20.0
margin_top = 90.0
margin_right = 520.0
margin_bottom = 420.0
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Pig is a deceptively simple dice game
that anyone can learn in a snap:


Step 1: Roll the die.
If you roll a one, you lose all the points you 
accumulated during that turn, and you lose your turn. 

Step 2: 
Continue rolling the die until you're happy with the number of points you've scored. Then, \"hold\" by handing the die over to your opponent, and track all points earned during your turn. 

Step 3: Reach 100 points first and win the round. 


Tip: 
Knowing when to stop rolling and end your turn is the key to winning this game. It's an exercise in deciding between 
gut instinct and greed.[/center]
"
text = "Pig is a deceptively simple dice game
that anyone can learn in a snap:


Step 1: Roll the die.
If you roll a one, you lose all the points you 
accumulated during that turn, and you lose your turn. 

Step 2: 
Continue rolling the die until you're happy with the number of points you've scored. Then, \"hold\" by handing the die over to your opponent, and track all points earned during your turn. 

Step 3: Reach 100 points first and win the round. 


Tip: 
Knowing when to stop rolling and end your turn is the key to winning this game. It's an exercise in deciding between 
gut instinct and greed.
"
scroll_active = false

[node name="GameStateView" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 70.0
margin_top = 126.0
margin_right = 960.0
margin_bottom = 200.0

[node name="Background" type="ColorRect" parent="GameStateView"]
margin_left = 4.0
margin_top = 4.0
margin_right = 886.0
margin_bottom = 70.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Title" type="Label" parent="GameStateView/Background"]
margin_top = 10.0
margin_right = 870.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 14 )
text = "Wow... You have won!"
align = 1
valign = 1

[node name="CreditsView" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 20.0
margin_top = 130.0
margin_right = 580.0
margin_bottom = 570.0

[node name="Background" type="ColorRect" parent="CreditsView"]
margin_left = 4.0
margin_top = 4.0
margin_right = 556.0
margin_bottom = 436.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Title" type="Label" parent="CreditsView/Background"]
margin_top = 10.0
margin_right = 540.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 10 )
text = "Credits"
align = 1

[node name="Info" type="RichTextLabel" parent="CreditsView/Background"]
margin_left = 20.0
margin_top = 70.0
margin_right = 520.0
margin_bottom = 420.0
custom_fonts/normal_font = SubResource( 15 )
bbcode_enabled = true
bbcode_text = "
[center]Dice Pig is a game designed and produced by 


Lava Block


Music 
Composer and Producer - BEN94z
Mixing and Mastering - Yung Milo


Graphics & Sounds
OpenGameArt.org


Inspired by

John Scarne (1945)  [/center]
"
text = "
Dice Pig is a game designed and produced by 


Lava Block


Music 
Composer and Producer - BEN94z
Mixing and Mastering - Yung Milo


Graphics & Sounds
OpenGameArt.org


Inspired by

John Scarne (1945)  
"
scroll_active = false

[node name="Link" type="Button" parent="CreditsView/Background"]
margin_left = 220.0
margin_top = 130.0
margin_right = 320.0
margin_bottom = 160.0
flat = true

[node name="MenuView" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 600.0
margin_top = 130.0
margin_right = 1000.0
margin_bottom = 570.0

[node name="Background" type="ColorRect" parent="MenuView"]
margin_left = 4.0
margin_top = 4.0
margin_right = 396.0
margin_bottom = 436.0
color = Color( 0, 0, 0, 0.313726 )

[node name="NewGame" type="Button" parent="MenuView/Background"]
margin_left = 10.0
margin_top = 20.0
margin_right = 370.0
margin_bottom = 77.0
focus_mode = 0
custom_fonts/font = SubResource( 16 )
enabled_focus_mode = 0
text = "New Game"
flat = true

[node name="Instruments" type="Button" parent="MenuView/Background"]
margin_left = 10.0
margin_top = 110.0
margin_right = 370.0
margin_bottom = 167.0
focus_mode = 0
custom_fonts/font = SubResource( 16 )
enabled_focus_mode = 0
text = "Instructions"
flat = true

[node name="Settings" type="Button" parent="MenuView/Background"]
margin_left = 10.0
margin_top = 180.0
margin_right = 370.0
margin_bottom = 237.0
focus_mode = 0
custom_fonts/font = SubResource( 16 )
enabled_focus_mode = 0
text = "Settings"
flat = true

[node name="Credits" type="Button" parent="MenuView/Background"]
margin_left = 10.0
margin_top = 250.0
margin_right = 370.0
margin_bottom = 307.0
focus_mode = 0
custom_fonts/font = SubResource( 16 )
enabled_focus_mode = 0
text = "Credits"
flat = true

[node name="Quit" type="Button" parent="MenuView/Background"]
margin_left = 10.0
margin_top = 340.0
margin_right = 370.0
margin_bottom = 397.0
focus_mode = 0
custom_fonts/font = SubResource( 16 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[node name="DemoButton" type="Button" parent="."]
margin_left = 774.0
margin_top = 18.0
margin_right = 846.0
margin_bottom = 44.0
focus_mode = 0
custom_fonts/font = SubResource( 17 )
enabled_focus_mode = 0
text = "Demo"
flat = true

[node name="Thinking" type="Label" parent="."]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
margin_left = 878.0
margin_top = 42.0
margin_right = 907.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 18 )
text = "?"

[node name="Node" type="Node2D" parent="."]
visible = false

[node name="Background2" type="TextureRect" parent="Node"]
modulate = Color( 0.439216, 0.439216, 0.439216, 1 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="WhiteBottom4" type="TextureRect" parent="Node"]
modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="WhiteBottom3" type="TextureRect" parent="Node"]
modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
margin_right = 1024.0
margin_bottom = 140.0
mouse_filter = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="Title2" type="Label" parent="Node"]
margin_right = 1024.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Dice Pig"
align = 1
valign = 1

[connection signal="pressed" from="RoundButton" to="." method="_on_RoundButton_pressed"]
[connection signal="pressed" from="DiceButton" to="." method="_on_DiceButton_pressed"]
[connection signal="pressed" from="DiceHiddenButton" to="." method="_on_DiceHiddenButton_pressed"]
[connection signal="pressed" from="ArrowLeft" to="." method="_on_ArrowLeft_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="ScoreButton" to="." method="_on_ScoreButton_pressed"]
[connection signal="pressed" from="SettingsView/Background/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="pressed" from="SettingsView/Background/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="SettingsView/Background/EffectsButton" to="." method="_on_EffectsButton_pressed"]
[connection signal="pressed" from="SettingsView/Background/TougherButton" to="." method="_on_TougherButton_pressed"]
[connection signal="pressed" from="SettingsView/Background/FastModeButton" to="." method="_on_FastModeButton_pressed"]
[connection signal="pressed" from="CreditsView/Background/Link" to="." method="_on_Link_pressed"]
[connection signal="pressed" from="MenuView/Background/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MenuView/Background/Instruments" to="." method="_on_Instruments_pressed"]
[connection signal="pressed" from="MenuView/Background/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MenuView/Background/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MenuView/Background/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="DemoButton" to="." method="_on_DemoButton_pressed"]
